--- a/JockeyGames.Client/Web.config
+++ b/JockeyGames.Client/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=301880
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="JockeyGamesClientContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=JockeyGamesClientContext-20170303182110; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|JockeyGamesClientContext-20170303182110.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="JockeyGamesClientContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=JockeyGamesClientContext-20170303182110; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|JockeyGamesClientContext-20170303182110.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -18,8 +17,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
 
-    <add key="UseLocalAPIBase" value="true"/>
-    <add key="JockeyGamesAPIBase" value="http://jockeygamesapi.azurewebsites.net"/>
+    <add key="UseLocalAPIBase" value="false" />
+    <add key="JockeyGamesAPIBase" value="http://jockeygamesapi.azurewebsites.net" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
@@ -69,4 +68,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-</configuration>
+<system.webServer>
+    <handlers>
+      <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
+      <remove name="OPTIONSVerbHandler" />
+      <remove name="TRACEVerbHandler" />
+      <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
+    </handlers>
+  </system.webServer></configuration>
