--- a/JockeyGames.Client/JockeyGames.Client.csproj
+++ b/JockeyGames.Client/JockeyGames.Client.csproj
@@ -140,26 +140,20 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
-    <Compile Include="Controllers\Games1Controller.cs" />
-    <Compile Include="Controllers\GamesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MatchesController.cs" />
-    <Compile Include="Controllers\PlayerGamesController.cs" />
     <Compile Include="Controllers\PlayersController.cs" />
     <Compile Include="Controllers\RecordController.cs" />
     <Compile Include="Controllers\StatsController.cs" />
-    <Compile Include="Controllers\TournamentsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\JockeyGamesClientContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\GamesService.cs" />
-    <Compile Include="Services\MatchService.cs" />
-    <Compile Include="Services\PlayerGamesService.cs" />
+    <Compile Include="Services\MatchesService.cs" />
     <Compile Include="Services\PlayersService.cs" />
-    <Compile Include="Services\TournamentService.cs" />
     <Compile Include="Services\URIService.cs" />
+    <Compile Include="ViewModels\MatchViewModel.cs" />
     <Compile Include="ViewModels\AddNewMatchViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -200,39 +194,19 @@
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Games\Create.cshtml" />
-    <Content Include="Views\Games\Delete.cshtml" />
-    <Content Include="Views\Games\Details.cshtml" />
-    <Content Include="Views\Games\Edit.cshtml" />
-    <Content Include="Views\Games\Index.cshtml" />
-    <Content Include="Views\PlayerGames\Create.cshtml" />
-    <Content Include="Views\PlayerGames\Delete.cshtml" />
-    <Content Include="Views\PlayerGames\Details.cshtml" />
-    <Content Include="Views\PlayerGames\Edit.cshtml" />
-    <Content Include="Views\PlayerGames\Index.cshtml" />
     <Content Include="Views\Home\Crud.cshtml" />
     <Content Include="Views\Stats\Index.cshtml" />
     <Content Include="Views\Record\Match.cshtml" />
-    <Content Include="Views\Matches\Create.cshtml" />
-    <Content Include="Views\Matches\Delete.cshtml" />
-    <Content Include="Views\Matches\Details.cshtml" />
-    <Content Include="Views\Matches\Edit.cshtml" />
-    <Content Include="Views\Matches\Index.cshtml" />
-    <Content Include="Views\Tournaments\Create.cshtml" />
-    <Content Include="Views\Tournaments\Delete.cshtml" />
-    <Content Include="Views\Tournaments\Details.cshtml" />
-    <Content Include="Views\Tournaments\Edit.cshtml" />
-    <Content Include="Views\Tournaments\Index.cshtml" />
-    <Content Include="Views\Games1\Create.cshtml" />
-    <Content Include="Views\Games1\Delete.cshtml" />
-    <Content Include="Views\Games1\Details.cshtml" />
-    <Content Include="Views\Games1\Edit.cshtml" />
-    <Content Include="Views\Games1\Index.cshtml" />
     <Content Include="Views\Players\Create.cshtml" />
     <Content Include="Views\Players\Delete.cshtml" />
     <Content Include="Views\Players\Details.cshtml" />
     <Content Include="Views\Players\Edit.cshtml" />
     <Content Include="Views\Players\Index.cshtml" />
+    <Content Include="Views\Matches\Create.cshtml" />
+    <Content Include="Views\Matches\Delete.cshtml" />
+    <Content Include="Views\Matches\Details.cshtml" />
+    <Content Include="Views\Matches\Edit.cshtml" />
+    <Content Include="Views\Matches\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
