--- a/JockeyGames.Client/JockeyGames.Client.csproj
+++ b/JockeyGames.Client/JockeyGames.Client.csproj
@@ -143,7 +143,6 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MatchesController.cs" />
     <Compile Include="Controllers\PlayersController.cs" />
-    <Compile Include="Controllers\RecordController.cs" />
     <Compile Include="Controllers\StatsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -152,9 +151,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\MatchesService.cs" />
     <Compile Include="Services\PlayersService.cs" />
+    <Compile Include="Services\StatsService.cs" />
     <Compile Include="Services\URIService.cs" />
     <Compile Include="ViewModels\MatchViewModel.cs" />
-    <Compile Include="ViewModels\AddNewMatchViewModel.cs" />
+    <Compile Include="ViewModels\StatListViewModel.cs" />
+    <Compile Include="ViewModels\StatsDetailViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
@@ -192,11 +193,9 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Home\Support.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\Crud.cshtml" />
     <Content Include="Views\Stats\Index.cshtml" />
-    <Content Include="Views\Record\Match.cshtml" />
     <Content Include="Views\Players\Create.cshtml" />
     <Content Include="Views\Players\Delete.cshtml" />
     <Content Include="Views\Players\Details.cshtml" />
@@ -207,6 +206,8 @@
     <Content Include="Views\Matches\Details.cshtml" />
     <Content Include="Views\Matches\Edit.cshtml" />
     <Content Include="Views\Matches\Index.cshtml" />
+    <Content Include="Views\Stats\Details.cshtml" />
+    <Content Include="Views\Stats\All.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
